better responsiveness in the PUI header

--- a/public/locales/en.yml
+++ b/public/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   brand:
-    title: The Special Collections and Archives Catalog
+    title: Archives @ DU Catalog 
     search_title: The Catalog
     title_link_text: Return to the DU Special Collections home page
     welcome_page_title: Welcome
